styles format of page

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <title>Aaron (Ron) Tsui</title>
 </head>
-<body>
+<body style="background-color:#F0F0F0">
 
-
+<div style="width:50%;margin:0 auto">
+  <embed src="resume_ron_tsui.pdf" width="800px" height="1015px" type='application/pdf'>
+</div>
 
 </body>
 </html>
